# PDFextract

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/app/: cli.py  main.py
backend/app/api/: __init__.py  request_context.py
backend/app/api/routes/: __init__.py  admin_routes.py  auth_routes.py  health_routes.py  jobs_routes.py  uploads_routes.py
backend/app/core/: __init__.py  config.py  constants.py  errors.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  admin_action.py  extraction_result.py  file_record.py  job.py  (+3 more)
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  auth_service.py  database_service.py  download_service.py  excel_service.py  extraction_service.py  firebase_service.py  job_service.py  kafka_service.py  pdf_reader_service.py  storage_service.py  upload_service.py  validation_service.py  worker_service.py
backend/scripts/: bootstrap_phase1.py  common.py  verify_phase1.py
backend/tests/: conftest.py  test_api_routes.py  test_config_and_services.py  test_http.py  test_integration_pipeline.py  test_unit_contracts.py
backend/worker/: __init__.py
backend/worker/handlers/: __init__.py  process_document.py  retry_document.py
backend/worker/lambda_entrypoints/: __init__.py  process_job_handler.py  retry_job_handler.py
backend/worker/services/: __init__.py  local_runner.py
(+63 files in other folders)
