[project]
name = "pdfextract-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Flask==3.1.0",
  "Werkzeug==3.1.3",
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "boto3==1.35.82",
  "confluent-kafka==2.6.1",
  "firebase-admin==6.6.0",
  "google-auth==2.37.0",
  "openpyxl==3.1.5",
  "pdfplumber==0.11.4",
  "PyMuPDF==1.25.1",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
